--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
         <div class="item">
-        <a target="_blank" href="http://origami.me/camel/"><img src="images/camel.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/camel/"><img src="camel.png" width=300 height=300></a>
         <p><i><b>Intersting facts about Camel:</b></i></p>
         <ol>
             <li>Camels can rach 7feet in height and weigh upto 1500 pounds.</li>
@@ -36,7 +36,7 @@
     <hr width=1000px>
         <br>
           <div class="item"> 
-        <a target="_blank" href="http://origami.me/chameleon/"><img src="images/chameleon.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/chameleon/"><img src="chameleon.png" width=300 height=300></a>
         <p><i><b>Intersting facts about Chameleon:</b></i></p>
         <ol>
             <li>About half of the chameleon species live in madagascar.</li>
@@ -49,7 +49,7 @@
     <hr width=1000px>
         <br> 
     <div class="item">
-        <a target="_blank" href="http://origami.me/flying-cicada/"><img src="images/cicada.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/flying-cicada/"><img src="cicada.png" width=300 height=300></a>
         <p><i><b>Intersting facts about Cicadas:</b></i></p>
         <ol>
             <li>Cicadas have red-orange eyes.</li>
@@ -62,7 +62,7 @@
     <hr width=1000px>
         <br>
     <div class="item">
-        <a target="_blank" href="http://origami.me/panda/"><img src="images/panda.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/panda/"><img src="panda.png" width=300 height=300></a>
         <p><i><b>Intersting facts about pandas:</b></i></p>
         <ol>
             <li>Pandas can climb trees as well they can swim too.</li>
@@ -75,7 +75,7 @@
     <hr width=1000px>
         <br>
    <div class="item">
-        <a target="_blank" href="http://origami.me/pigeon/"><img src="images/pigeon.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/pigeon/"><img src="pigeon.png" width=300 height=300></a>
         <p><i><b>Intersting facts about Pigeons:</b></i></p>
         <ol>
             <li>Pigeons are herbivorus and highly socialable animals.</li>
@@ -88,7 +88,7 @@
     <hr width=1000px>
         <br>
     <div class="item">
-        <a target="_blank" href="http://origami.me/teddy-bear/"><img src="images/teddy.png" width=300 height=300></a>
+        <a target="_blank" href="http://origami.me/teddy-bear/"><img src="teddy.png" width=300 height=300></a>
          <p><i><b>Intersting facts about TeddyBear:</b></i></p>
          <ol>
              <li>Teddybears got their name from Teddy Roosevelt story.</li>
